Created and Initially seeded the database.

--- a/TripsLog/appsettings.json
+++ b/TripsLog/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TripsContext": "Server=(localdb)\\mssqllocaldb;Database=Trips;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
